# video_stream_DDS

./: CMakeLists.txt  README.md
src/: HelloWorld.cxx  HelloWorld.h  HelloWorld.idl  HelloWorldPublisher.cpp  HelloWorldSubscriber.cpp  client.cpp  server.cpp
src/ddsrouter_config/: wan_client.yaml  wan_server.yaml
